blockml/test/valid/14_apply_filter/v40/v40d.dashboard
dashboard: v40d
reports:
- title: 'sales weekly'
  model: v40m
  select:
  - a.dim1
  type: 'table'
